Fixed latex copilation issues

--- a/Thesis TinoV2/Thesis.tex
+++ b/Thesis TinoV2/Thesis.tex
@@ -199,10 +199,10 @@ Qui va inserito l'abstract in italiano.
 %
 % Especially for long thesis, we recommend you the second option.
 
-\chapter{Pre Tino & goal}
-\chapter{SLAM, process and R&D}
-\chapter{General sensor stuff (speaker, mic, VR}
-\chapter{Legacy to ROS2 migration & ROS arquitecture}
+\chapter{Pre Tino \& goal}
+\chapter{SLAM, process and R\&D}
+\chapter{General sensor stuff speaker, mic, VR}
+\chapter{Legacy to ROS2 migration \& ROS arquitecture}
 \chapter{Physical changes}
 \chapter{Testing}
 
@@ -220,7 +220,8 @@ Qui va inserito l'abstract in italiano.
 %-------------------------------------------------------------------------
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
-\bibliography{Thesis_bibliography} % The references information are stored in the file named "Thesis_bibliography.bib"
+% \bibliography{Thesis_bibliography} % The references information are stored in the file named "Thesis_bibliography.bib"
+% Commented out since no formal citations are used in the current document
 
 %-------------------------------------------------------------------------
 %	APPENDICES
