--- a/Thesis TinoV2/Thesis.tex
+++ b/Thesis TinoV2/Thesis.tex
@@ -220,8 +220,7 @@ Qui va inserito l'abstract in italiano.
 %-------------------------------------------------------------------------
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
-% \bibliography{Thesis_bibliography} % The references information are stored in the file named "Thesis_bibliography.bib"
-% Commented out since no formal citations are used in the current document
+\bibliography{Thesis_bibliography} % The references information are stored in the file named "Thesis_bibliography.bib"
 
 %-------------------------------------------------------------------------
 %	APPENDICES
