--- a/Thesis TinoV2/Thesis_bibliography.bib
+++ b/Thesis TinoV2/Thesis_bibliography.bib
@@ -1,3 +1,163 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 % Encoding: UTF-8
+
+@article{campos2021orbslam3,
+  title={ORB-SLAM3: An Accurate Open-Source Library for Visual, Visual-Inertial, and Multimap SLAM},
+  author={Campos, Carlos and Elvira, Richard and Rodríguez, Juan J Gómez and Montiel, José MM and Tardós, Juan D},
+  journal={IEEE Transactions on Robotics},
+  year={2021},
+  url={https://arxiv.org/abs/2007.11898}
+}
+
+@inproceedings{forster2016svo,
+  title={SVO: Semidirect Visual Odometry for Monocular and Multicamera Systems},
+  author={Forster, Christian and Zhang, Zichao and Gassner, Michael and Werlberger, Manuel and Scaramuzza, Davide},
+  booktitle={IEEE Transactions on Robotics},
+  year={2016},
+  url={https://ieeexplore.ieee.org/document/7782863}
+}
+
+@article{huang2018sensor,
+  title={Sensor Fusion for Mobile Robot Localization Using Extended Kalman Filter UWB ToF and ArUco Markers},
+  author={Huang, Lei and others},
+  journal={ResearchGate},
+  year={2018},
+  url={https://www.researchgate.net/publication/356744906_Sensor_Fusion_for_Mobile_Robot_Localization_Using_Extended_Kalman_Filter_UWB_ToF_and_ArUco_Markers}
+}
+
+@article{ekf2021practice,
+  title={Extended Kalman Filter Sensor Fusion in Practice for Mobile Robot Localization},
+  author={Anonymous},
+  journal={IJACSA},
+  volume={13},
+  number={2},
+  year={2021},
+  url={https://thesai.org/Downloads/Volume13No2/Paper_4-Extended_Kalman_Filter_Sensor_Fusion_in_Practice.pdf}
+}
+
+@inproceedings{uwb2007localization,
+  title={A UWB-IR based Localization System for Indoor Robot Navigation},
+  author={Anonymous},
+  booktitle={IEEE International Conference},
+  year={2007},
+  url={https://ieeexplore.ieee.org/abstract/document/4380919}
+}
+
+@article{chen2018uwb,
+  title={Robot vision ultra-wideband wireless sensor in non-cooperative industrial environments},
+  author={Chen, Rui and others},
+  journal={International Journal of Advanced Robotic Systems},
+  year={2018},
+  url={https://journals.sagepub.com/doi/full/10.1177/1729881418795767}
+}
+
+@inproceedings{olson2011apriltag,
+  title={AprilTag: A Robust Fiducial System},
+  author={Olson, Edwin},
+  booktitle={IEEE International Conference on Robotics and Automation},
+  year={2011},
+  url={https://april.eecs.umich.edu/papers/details.php?name=olson2011tags}
+}
+
+@misc{optitrack2024robotics,
+  title={OptiTrack for Robotics – Industrial use cases},
+  author={OptiTrack},
+  year={2024},
+  url={https://www.naturalpoint.com/optitrack/applications/robotics/}
+}
+
+@article{uwbori2024,
+  title={UWBOri: enabling accurate orientation estimation with ultra-wideband signals},
+  author={Anonymous},
+  journal={HAL Science},
+  year={2024},
+  url={https://hal.science/hal-04754129/}
+}
+
+@article{luo2020uwb,
+  title={UWB System for Indoor Positioning and Tracking With Arbitrary Target Orientation, Optimal Anchor Location, and Adaptive NLOS Mitigation},
+  author={Luo, Jingyu and others},
+  journal={IEEE Access},
+  year={2020},
+  url={https://ieeexplore.ieee.org/abstract/document/8989827}
+}
+
+@article{rpo2019uwb,
+  title={Measurement of Relative Position and Orientation using UWB},
+  author={Anonymous},
+  journal={IEEE},
+  year={2019},
+  url={https://ieeexplore.ieee.org/abstract/document/8827149}
+}
+
+@article{thermal2019detection,
+  title={Real-Time Implementation of Human Detection in Thermal Imagery Based on CNN},
+  author={Anonymous},
+  journal={ResearchGate},
+  year={2019},
+  url={https://www.researchgate.net/publication/330762720_Real-Time_Implementation_of_Human_Detection_in_Thermal_Imagery_Based_on_CNN}
+}
+
+@article{ultrasonic2020tracking,
+  title={Ultrasonic Human Tracking},
+  author={Anonymous},
+  journal={Korea Science},
+  year={2020},
+  note={In Korean},
+  url={https://koreascience.kr/article/JAKO202019962560668.pdf}
+}
+
+@article{wang2022yolov7,
+  title={YOLOv7: Trainable bag-of-freebies sets new state-of-the-art for real-time object detection},
+  author={Wang, Chien-Yao and Bochkovskiy, Alexey and Liao, Hong-Yuan Mark},
+  journal={arXiv preprint arXiv:2207.02696},
+  year={2022},
+  url={https://arxiv.org/abs/2207.02696}
+}
+
+@article{cao2019openpose,
+  title={OpenPose: Real-Time Human Pose Detection},
+  author={Cao, Zhe and Hidalgo, Gines and Simon, Tomas and Wei, Shih-En and Sheikh, Yaser},
+  journal={arXiv preprint arXiv:1812.08008},
+  year={2019},
+  url={https://arxiv.org/abs/1812.08008}
+}
+
+@article{azure2021kinect,
+  title={Azure Kinect for Robotics – Performance Analysis of Body Tracking},
+  author={Anonymous},
+  journal={IEEE},
+  year={2021},
+  url={https://ieeexplore.ieee.org/abstract/document/9480177}
+}
+
+@article{yan2019lidar,
+  title={LiDAR-based Human detection},
+  author={Yan, Zhi and others},
+  journal={Autonomous Robots},
+  year={2019},
+  url={https://link.springer.com/article/10.1007/s10514-019-09883-y}
+}
+
+@article{rfsensing2022,
+  title={RF-Sensing: A New Way to Observe Surroundings},
+  author={Anonymous},
+  journal={IEEE},
+  year={2022},
+  url={https://ieeexplore.ieee.org/abstract/document/9982449}
+}
+
+@misc{orbslam3github,
+  title={ORB-SLAM3 GitHub Repository},
+  author={UZ-SLAMLab},
+  year={2024},
+  url={https://github.com/UZ-SLAMLab/ORB_SLAM3}
+}
+
+@misc{svogithub,
+  title={SVO Pro Open GitHub Repository},
+  author={UZH-RPG},
+  year={2024},
+  url={https://github.com/uzh-rpg/rpg_svo_pro_open}
+}
