Updated to Classic thesis structure

--- a/Thesis TinoV2/Thesis.tex
+++ b/Thesis TinoV2/Thesis.tex
@@ -204,37 +204,29 @@ Qui va inserito l'abstract in italiano.
 \mainmatter % Begin numeric (1,2,3...) page numbering
 
 
-% Chapter 1: Background and Objectives
-\chapter{Introduction and Project Overview}
-\input{Chapters/chapter1_introduction}
+% Chapter 1: Introduction
+\chapter{Introduction}
+\input{Chapters/introduction}
 
-% Chapter 2: State of the Art and Technology Selection
-\chapter{Technology Research and Selection}
-\input{Chapters/chapter2_technology_research}
+% Chapter 2: Background
+\chapter{Background}
+\input{Chapters/background}
 
-% Chapter 3: System Architecture and ROS2 Migration
-\chapter{System Architecture and Software Migration}
-\input{Chapters/chapter3_system_architecture}
+% Chapter 3: Conceptual Work
+\chapter{Conceptual Work}
+\input{Chapters/conceptual_work}
 
-% Chapter 4: SLAM Implementation and Localization
-\chapter{SLAM Implementation and Sensor Fusion}
-\input{Chapters/chapter4_slam_sensor_fusion}
+% Chapter 4: Implementation
+\chapter{Implementation}
+\input{Chapters/implementation}
 
-% Chapter 5: Hardware Redesign and Mechanical Improvements
-\chapter{Hardware Redesign and Mechanical Improvements}
-\input{Chapters/chapter5_hardware_redesign}
+% Chapter 5: Evaluation
+\chapter{Evaluation}
+\input{Chapters/evaluation}
 
-% Chapter 6: Human Detection and Pose Estimation
-\chapter{Human Detection and Pose Estimation}
-\input{Chapters/chapter6_human_detection}
-
-% Chapter 7: VR Integration and Movement Control
-\chapter{VR Integration and Atomic Movement System}
-\input{Chapters/chapter7_vr_integration}
-
-% Chapter 8: System Evaluation, Future Work and Conclusions
-\chapter{System Evaluation, Future Work and Conclusions}
-\input{Chapters/chapter8_evaluation_conclusions}
+% Chapter 6: Conclusions
+\chapter{Conclusions}
+\input{Chapters/conclusions}
 
 % \input{Chapters/temporalRD}
 
