Chapter 1 & 2 + Biblio updated

--- a/Thesis TinoV2/Thesis.tex
+++ b/Thesis TinoV2/Thesis.tex
@@ -228,7 +228,7 @@ Qui va inserito l'abstract in italiano.
 \chapter{Conclusions}
 \input{Chapters/conclusions}
 
-% \input{Chapters/temporalRD}
+\input{Chapters/temporalRD}
 
 % --------------------------------------------------------------------------
 % NUMBERED CHAPTERS % Regular chapters following
