--- a/Thesis TinoV2/Thesis.tex
+++ b/Thesis TinoV2/Thesis.tex
@@ -220,6 +220,17 @@ Qui va inserito l'abstract in italiano.
 \chapter{Implementation}
 \input{Chapters/implementation}
 
+\input{Chapters/Hardware_implementation}
+
+\input{Chapters/Software_implementation}
+
+\input{Chapters/Perception_implementation}
+
+\input{Chapters/Control_implementation}
+
+\input{Chapters/Integration_implementation.tex}
+
+
 % Chapter 5: Evaluation
 \chapter{Evaluation}
 \input{Chapters/evaluation}
